--- a/ATS2020_IDEA/web/WEB-INF/jspf/navigation.jspf
+++ b/ATS2020_IDEA/web/WEB-INF/jspf/navigation.jspf
@@ -20,9 +20,9 @@
                             Employees
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="${pageContext.request.contextPath}/employees">Employees</a>
+                            <a class="dropdown-item" href="${pageContext.request.contextPath}/employee/create">Create
+                                Employee</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -44,7 +44,8 @@
                             Tasks
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="${pageContext.request.contextPath}/task/create">Create new task</a>
+                            <a class="dropdown-item" href="${pageContext.request.contextPath}/task/create">Create new
+                                task</a>
                             <a class="dropdown-item" href="#">List of tasks</a>
                         </div>
                     </li>
